--- a/index.html
+++ b/index.html
@@ -1,22 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Alarm Clock</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <div class="clock">
-    <h1 id="time"></h1>
-    <label for="alarm-time">Set Alarm:</label>
-    <input type="time" id="alarm-time">
-    <button id="set-alarm">Set Alarm</button>
-    <button id="clear-alarm">Clear Alarm</button>
-  </div>
-
-  <audio id="alarm-sound" src="alarm.mp3" loop></audio>
-
-  <script src="script.js"></script>
-</body>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <title>Alarm Clock</title>
+    <!-- Link to the favicon -->
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
+    <!-- Link to the external CSS file -->
+    <link rel="stylesheet" href="style.css" />
+    <!-- Responsive viewport meta tag -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+  <body>
+    <!-- Wrapper for the entire content -->
+    <div class="wrapper">
+      <!-- Image of an alarm clock -->
+      <img src="./assets/images/alarm.png" alt="clock" />
+      <!-- Display for the current time -->
+      <h1>00:00:00 PM</h1>
+      <!-- Container for hour, minute, and AM/PM selection -->
+      <div class="content">
+        <!-- Hour selection dropdown -->
+        <div class="column">
+          <select>
+            <option value="Hour" selected disabled hidden>Hour</option>
+          </select>
+        </div>
+        <!-- Minute selection dropdown -->
+        <div class="column">
+          <select>
+            <option value="Minute" selected disabled hidden>Minute</option>
+          </select>
+        </div>
+        <!-- AM/PM selection dropdown -->
+        <div class="column">
+          <select>
+            <option value="AM/PM" selected disabled hidden>AM/PM</option>
+          </select>
+        </div>
+      </div>
+      <!-- Button to set the alarm -->
+      <button>Set Alarm</button>
+    </div>
+    <!-- Link to the JavaScript file -->
+    <script src="index.js"></script>
+  </body>
 </html>
