Added Alarm List Feature

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
       </div>
       <!-- Button to set the alarm -->
       <button>Set Alarm</button>
+      <!-- Selected Alarm List -->
+      <div class="alarm-list" id="alarm-lsit-id">
+        <p>Selected Alarms</p>
+      </div>
     </div>
     <!-- Link to the JavaScript file -->
     <script src="index.js"></script>
